# qzsl6tool

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  SECURITY.md  alst2qzsl6.py  changes.md  ecef2llh.py  gps2utc.py  license.txt  llh2ecef.py  pksdr2l6.py  pyproject.toml  qzsl62rtcm.py  readme-en.md  readme.md  release_note.md  release_note.txt  requirements.txt  showrtcm.py  utc2gps.py
c/: alsread.c
docs/: alstread-en.md  alstread.md  compatibility-en.md  compatibility.md  ecef2llh-en.md  ecef2llh.md  gale6read-en.md  gps2utc-en.md  llh2ecef-en.md  llh2ecef.md  psdrread-en.md  psdrread.md  qzsl6read-en.md  qzsl6read.md  rtcmread.md  utc2gps.md
docs/en/: alstread.md  bdsb2read.md  compatibility.md  ecef2llh.md  gale6read.md  galinavread.md  gps2utc.md  l6rtcm4050.md  llh2ecef.md  novread.md  psdrread.md  qzsl1sread.md  qzsl6read.md  rtcmread.md  septread.md  ubxread.md  utc2gps.md
docs/ja/: alstread.md  bdsb2read.md  compatibility.md  ecef2llh.md  gale6read.md  galinavread.md  gps2utc.md  l6rtcm4050.md  llh2ecef.md  novread.md  psdrread.md  qzsl1sread.md  qzsl6read.md  rtcmread.md  septread.md  ubxread.md  utc2gps.md
python/: alst2qzsl6.py  alstread.py  bdsb2read.py  ecef2llh.py  gale62rtcm.py  gale6read.py  galinavread.py  gps2utc.py  l6rtcm4050.py  libbdsb2.py  libbit.py  libcolor.py  libcssr.py  libecef.py  libeph.py  libgale6.py  libgnsstime.py  libnav.py  libobs.py  libqznma.py  libqzsl6.py  libqzsl6tool.py  librtcm.py  libssr.py  libtrace.py  llh2ecef.py  nov2has.py  novdump.py  novread.py  pksdr2has.py  pksdr2qzsl6.py  psdrread.py  qzsl1sread.py  qzsl62rtcm.py  qzsl6read.py  rtcmread.py  sept2has.py  septdump.py  septread.py  showrtcm.py  (+2 more)
sample/: 2018001A.l6  2019001A.l6  20190529hiroshima.rtcm  20210101jaxamdc.rtcm  20211226-082212pocketsdr-clas.txt  20211226-082212pocketsdr-mdc.txt  2022001A.l6  20220326-231200clas.alst  20220326-231200mdc.alst  20220930-115617pocketsdr-e6b.txt  20221130-125237mdc-ppp.alst  20221213-010900.rtcm  20230219-133831pocketsdr-e6b.txt  20230305-063900pocketsdr-e6b.txt  20230819-053733has.nov  20230819-061342misc.nov  20230819-081730hasbds.sept  20230819-082130clas.sept  20230819-085030mdc-ppp.sept  20230919-114418.ubx  2024214A.200.l6  readme.txt
test/: 20211226-082212pocketsdr-mdc.l6  20220326-231200clas.txt  20220326-231200mdc.rtcm  20220326-231200mdc.rtcm.txt  20221130-125237mdc-ppp.l6  20221130-125237mdc-ppp.rtcm.txt  20230305-063900has.txt  20230819-053733has.txt  do_test.sh  readme.md
test/expect/: 2018001A.txt  2019001A.txt  20190529hiroshima.rtcm.txt  2022001A.txt  (+42 more)
